# fastapi-db-test-example

./: README.md  alembic.ini  flake.nix  pyproject.toml
alembic/: env.py
alembic/versions/: de08b35e5e55_.py
lib/: app.py  crud.py  database.py  models.py  schemas.py
tests/: conftest.py  test_authors.py  test_things.py
